--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Page with Sections</title>
     <meta name="description" content="A sample web page with multiple sections.">
+    <link rel="stylesheet" href="assets/css/style-3.css">
 
+
+    <p><a href="exercises/page-4.html">Vincent van Gogh</a></p>
+    <p><a href="exercises/page-5.html">Irish Tourism</a></p>
 
 </head>
 
@@ -20,7 +24,7 @@
 
     <!-- Main content of web page in sections -->
     <main>
-        <section>
+        <section class="section-1">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
                 sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
@@ -31,7 +35,7 @@
 
         </section>
 
-        <section>
+        <section class="section-2">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
                 sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
@@ -42,7 +46,7 @@
 
         </section>
 
-        <section>
+        <section class="section-3">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
                 sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
@@ -53,38 +57,50 @@
 
         </section>
 
-        </section>
+        <section class="section-4">
 
-        <h2>Smaller Heading</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi sint
-            eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in quisquam?
-        </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, quas inventore? Nostrum inventore impedit
-            nam ex beatae in quam eum repellendus nulla aliquid, quas eveniet amet dolorum sint voluptatum quaerat.</p>
-
-        </section>
-
-        </section>
-
-        <h2>Smaller Heading</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi sint
-            eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in quisquam?
-        </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, quas inventore? Nostrum inventore impedit
-            nam ex beatae in quam eum repellendus nulla aliquid, quas eveniet amet dolorum sint voluptatum quaerat.</p>
+            <h2>Smaller Heading</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
+                sint
+                eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
+                quisquam?
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, quas inventore? Nostrum inventore
+                impedit
+                nam ex beatae in quam eum repellendus nulla aliquid, quas eveniet amet dolorum sint voluptatum quaerat.
+            </p>
 
         </section>
 
+        <section class="section-5">
+
+            <h2>Smaller Heading</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
+                sint
+                eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
+                quisquam?
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, quas inventore? Nostrum inventore
+                impedit
+                nam ex beatae in quam eum repellendus nulla aliquid, quas eveniet amet dolorum sint voluptatum quaerat.
+            </p>
+
         </section>
 
-        <h2>Smaller Heading</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi sint
-            eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in quisquam?
-        </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, quas inventore? Nostrum inventore impedit
-            nam ex beatae in quam eum repellendus nulla aliquid, quas eveniet amet dolorum sint voluptatum quaerat.</p>
+        <section class="section-1">
 
-        <p><a href="../index.html">Back to Home page</a></p>
+            <h2>Smaller Heading</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
+                sint
+                eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
+                quisquam?
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, quas inventore? Nostrum inventore
+                impedit
+                nam ex beatae in quam eum repellendus nulla aliquid, quas eveniet amet dolorum sint voluptatum quaerat.
+            </p>
+
+            <p><a href="../index.html">Back to Home page</a></p>
 
         </section>
 
