--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,48 @@
     <meta name="description"
         content="Hi I'm Mary, a UI & UX designer based in Dublin. Mobile and Responsive Web Design, eCommerce Websites, Branding and Logo Design.">
 
+    <link rel="stylesheet" href="assets/css/global.css">
+
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/img/favicons/site.webmanifest">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-67EKJT6DZN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-67EKJT6DZN');
+    </script>
+
 </head>
 
 <body>
-    <h1>Hi, I'm Mary Smith</h1>
-    <h2>Web / UI Designer</h2>
-    <p>I created this website to showcase some of my recent web design work.</p>
-    <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
+
+    <header>
+        <h1>Hi, I'm Mozaniel Santos</h1>
+        <h2>Web / UI Designer</h2>
+        <img src="assets/img/matrix.jpg" alt="Mozaniel Santos: Web Designer">
+    </header>
+
+    <main>
+        <section>
+            <p>I created this website to showcase some of my recent web design work.</p>
+
+            <h3>Sample Web Pages</h3>
+            <p><a href="exercises/page-1.html">A table of Two Cities</a></p>
+            <p><a href="exercises/page-2.html">Purple Rain</a></p>
+            <p><a href="exercises/page-3.html">Web Pages with Sections</a></p>
+            <p><a href="exercises/page-4.html">Vincent van Gogh</a></p>
+            <p><a href="exercises/page-5.html">Irish Tourism</a></p>
+        </section>
+    </main>
 </body>
+
 
 </html>
