--- a/Websites/index.html
+++ b/Websites/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Hi, I'm Mozaniel Santos</h1>
+    <h1>Hi, I'm Mozaniel</h1>
     <h2>Web / UI Designer</h2>
     <p>I created this website to showcase some of my recent web design work.</p>
     <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
