--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mozaniel Santos - Independent Web and Digital Developer</title>
     <meta name="description"
         content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media.">
+    <link rel="stylesheet" href="assets/css/global.css">
 </head>
 
 <body>
@@ -22,6 +23,7 @@
             <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
             <p><a href="exercises/page-2.html">Purple Rain</a></p>
             <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
+
         </section>
     </main>
 
