--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -24,7 +24,7 @@
 
     <!-- Main content of web page in sections -->
     <main>
-        <section>
+        <section class="section-1">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
                 sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
@@ -36,7 +36,7 @@
 
         </section>
 
-        <section>
+        <section class="section-2">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
                 sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
@@ -48,7 +48,7 @@
 
         </section>
 
-        <section>
+        <section class="section-3">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
                 sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
@@ -60,7 +60,7 @@
 
         </section>
 
-        <section>
+        <section class="section-4">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
                 sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
@@ -72,7 +72,7 @@
 
         </section>
 
-        <section>
+        <section class="section-5">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
                 sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
@@ -84,7 +84,7 @@
 
         </section>
 
-        <section>
+        <section class="section-1">
             <h2>Smaller Heading</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima exercitationem, fuga doloribus sequi
                 sint eveniet nobis nulla obcaecati quibusdam quae, quia aliquam mollitia ea vel ullam dolores natus in
