--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <h1>Hi, I'm Mozaniel Santos</h1>
         <h2>Web / UI Designer</h2>
+        ‹img src="assets/img/developer.jpg" alt="Mozaniel Santos: Web Designer">
     </header>
 
     <main>
@@ -23,6 +24,8 @@
             <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
             <p><a href="exercises/page-2.html">Purple Rain</a></p>
             <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
+            <p><a href="exercises/page-4.html">Vincent van Gogh</a></p>
+            <p><a href="exercises/page-5.html">Irish Tourism</a></p>
 
         </section>
     </main>
