--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>Hi, I'm Mozaniel Santos</h1>
         <h2>Web / UI Designer</h2>
-        ‹img src="assets/img/developer.jpg" alt="Mozaniel Santos: Web Designer">
+        <img src="assets/img/developer.jpg" alt="Mozaniel Santos: Web Designer">
     </header>
 
     <main>
