--- a/exercises/page-5.html
+++ b/exercises/page-5.html
@@ -14,10 +14,16 @@
 
 </head>
 
-<body>
+<body id="top-of-page">
 
   <header>
     <h1>Ireland's Top Five Visitor Attractions</h1>
+
+    <p><a href="#guinness">1: Guinness Storehouse, Dublin</a></p>
+    <p><a href="#cliffs-of-moher">2: Cliffs of Moher, Co. Clare</a></p>
+    <p><a href="#dublin-zoo">3: Dublin Zoo</a></p>
+    <p><a href="#aquatic-centre">4: National Aquatic Centre, Dublin</a></p>
+    <p><a href="#kells-tcd">5: Book of Kells Exhibition, Trinity College, Dublin</a></p>
 
     <p>Visiting Ireland is like taking a great big breath of fresh air. Ireland is a country brimming with fun and
       fascinating ways for visitors to spend their days and nights. You'll discover just the right mountain to climb,
@@ -37,6 +43,8 @@
 
       <h2>Guinness Storehouse, Dublin</h2>
 
+      <h2 id="guinness">Guinness Storehouse, Dublin</h2>
+
 
       <img src="assets/img/guinness-storehouse.jpg" alt="Guinness Storehouse">
 
@@ -53,6 +61,8 @@
 
       <h2>Cliffs of Moher, Co. Clare</h2>
 
+      <h2 id="cliffs-of-moher">Cliffs of Moher, Co. Clare</h2>
+
       <img src="assets/img/cliffs-of-moher.jpg" alt="Cliffs of Moher">
 
       <p>You simply cannot travel to Ireland without paying a visit to the breathtaking <a
@@ -68,6 +78,8 @@
 
       <h2>Dublin Zoo</h2>
 
+      <h2 id="dublin-zoo">Dublin Zoo</h2>
+
       <img src="assets/img/dublin-zoo.jpg" alt="Dublin Zoo">
 
       <p>Established in 1830, <a href="https://www.dublinzoo.ie" target="_blank">Dublin Zoo</a> works in partnership
@@ -82,6 +94,8 @@
 
       <h2>National Aquatic Centre, Dublin</h2>
 
+      <h2 id="aquatic-centre">National Aquatic Centre, Dublin</h2>
+
       <img src="assets/img/national-aquatic-centre.jpg" alt="National Aquatic Centre">
 
       <p>Located in the Dublin suburb of Blanchardstown, Dublin, the <a href="https://www.nationalaquaticcentre.ie"
@@ -94,6 +108,8 @@
 
       <h2>Book of Kells Exhibition, Trinity College, Dublin</h2>
 
+      <h2 id="kells-tcd">Book of Kells Exhibition, Trinity College, Dublin</h2>
+
       <img src="assets/img/book-of-kells.jpg" alt="Book of Kells">
 
       <p>Based at Trinity College in the heart of Dublin city, the <a href="https://www.tcd.ie/visitors/book-of-kells/"
@@ -103,6 +119,8 @@
         features access to the Long Room, a magnificent and beautiful library, that houses 200,000 of Trinity College's
         oldest books.</p>
       <p class="highlight-text">Annual Number of Visitors: <b>983,410</b></p>
+
+      <p><a href="#top-of-page">Return to top of page</a></p>
 
     </section>
 
