--- a/exercises/page-5.html
+++ b/exercises/page-5.html
@@ -122,6 +122,8 @@
 
       <p><a href="#top-of-page">Return to top of page</a></p>
 
+      <p><a href="../index.html">Back to Home page</a></p>
+
     </section>
 
   </main>
