--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <p><a href="exercises/page-4.html">Vincent van Gogh</a></p>
             <p><a href="exercises/page-5.html">Irish Tourism</a></p>
 
+            <p><a href="exercises/hero-text.html">Hero block with animated text</a></p>
+
         </section>
     </main>
 
