--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
             <p><a href="exercises/hero-text.html">Hero block with animated text</a></p>
 
+            <p><a href="exercises/hero-image.html">Hero block with background image</a></p>
+
         </section>
     </main>
 
