--- a/index.html
+++ b/index.html
@@ -22,7 +22,27 @@
     <header>
         <h1>Hi, I'm Mozaniel Santos</h1>
         <h2>Web / UI Designer</h2>
+
+        <main>
+            <section>
+                <h3>
+                    <p>I created this website to showcase some of my recent web design work.</p>
+                    <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
+                    <p><a href="exercises/page-2.html">Purple Rain</a></p>
+                    <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
+                    <p><a href="exercises/page-4.html">Vincent van Gogh</a></p>
+                    <p><a href="exercises/page-5.html">Irish Tourism</a></p>
+
+                    <p><a href="exercises/hero-text.html">Hero block with animated text</a></p>
+
+                    <p><a href="exercises/hero-image.html">Hero block with background image</a></p>
+
+                    <p><a href="exercises/hero-video.html">Hero block with background video</a></p>
+                </h3>
+            </section>
+        </main>
         <img src="assets/img/developer.jpg" alt="Mozaniel Santos: Web Designer">
+
     </header>
 
     <main>
@@ -37,6 +57,8 @@
             <p><a href="exercises/hero-text.html">Hero block with animated text</a></p>
 
             <p><a href="exercises/hero-image.html">Hero block with background image</a></p>
+
+            <p><a href="exercises/hero-video.html">Hero block with background video</a></p>
 
         </section>
     </main>
