--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 }
             },
             "content": {
-                "href": "https://username.github.io/privacy.html"
+                "href": "https://mozanielcsantos.github.io/privacy.html"
             }
         });
     </script>
