--- a/index.html
+++ b/index.html
@@ -29,37 +29,53 @@
     <!-- Styles for Cookie Consent Popup Message  -->
     <link href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
+
+
+
 </head>
 
 <body>
 
+
     <header>
-        <h1>Hi, I'm Mozaniel Santos</h1>
-        <h2>Web / UI Designer</h2>
+        <div class="hero-text-container">
+            <h1 class="slide-in-top">Hi, I'm Mozaniel Santos</h1>
+            <h2 class="slide-in-left">Web / UI Designer
+
+                <p>I created this website to showcase some of my recent web design work.</p>
+            </h2>
+        </div>
+
+        <div class="bg-overlay"></div>
+
+        <div class="hero-bg-media">
+            <video loop playsinline muted autoplay poster="assets/videos/hero-still.jpg" class="background-video"
+                disablepictureinpicture preload="auto">
+                <source src="assets/videos/myvideo.mp4" type="video/mp4">
+            </video>
+        </div>
 
         <main>
             <section>
                 <h3>
-                    <p>I created this website to showcase some of my recent web design work.</p>
-
-                    <img src="assets/img/developer.jpg" alt="Mozaniel Santos: Web Designer">
-
                     <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
                     <p><a href="exercises/page-2.html">Purple Rain</a></p>
                     <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
                     <p><a href="exercises/page-4.html">Vincent van Gogh</a></p>
                     <p><a href="exercises/page-5.html">Irish Tourism</a></p>
-
                     <p><a href="exercises/hero-text.html">Hero block with animated text</a></p>
-
                     <p><a href="exercises/hero-image.html">Hero block with background image</a></p>
-
                     <p><a href="exercises/hero-video.html">Hero block with background video</a></p>
                 </h3>
             </section>
         </main>
-
     </header>
+
 
 
     <!-- JavaScript for Cookie Consent Popup Message -->
