--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Mozaniel Clementino dos Santos (Student ID: 76266) -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -47,14 +49,14 @@
             <h1 class="slide-in-top">Hi, I'm Mozaniel Santos</h1>
             <h2 class="slide-in-left">Web / UI Designer
 
-                <p>I created this website to showcase some of my recent web design work.</p>
+                <h4>I created this website to showcase some of my recent web design work.</h4>
             </h2>
         </div>
 
         <div class="bg-overlay"></div>
 
         <div class="hero-bg-media">
-            <video loop playsinline muted autoplay poster="assets/videos/hero-still.jpg" class="background-video"
+            <video loop playsinline muted autoplay poster="assets/videos/myvideo.mp4" class="background-video"
                 disablepictureinpicture preload="auto">
                 <source src="assets/videos/myvideo.mp4" type="video/mp4">
             </video>
