--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     
             <div class="col-2 col-text">
                 <div class="badge">WELCOME</div>
-                <h1>Mary Smith</h1>
+                <h1>Mozaniel Santos</h1>
                 <h2>I am an innovative front-end developer who loves to build human-friendly interfaces.</h2>
     
                 <div class="container-btn">
@@ -167,7 +167,7 @@
  
 	<footer class="theme-dark text-center-desktop text-center-mobile">
 
-		<h2>Mary Smith</h2>
+		<h2>Mozaniel Santos</h2>
 
 		<h3>Front-end designer and developer</h3>
 
