--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -124,7 +124,7 @@
  
 	<footer class="theme-dark text-center-desktop text-center-mobile">
 
-		<h2>Mary Smith</h2>
+		<h2>Mozaniel Santos</h2>
 
 		<h3>Front-end designer and developer</h3>
 
